ajustement du swagger des logs
