# app/Http/Controllers/ApiKeyUsageLogController.php
@@ -16,7 +16,7 @@ class ApiKeyUsageLogController extends Controller
 {
     /**
      * @OA\Get(
-     *     path="/api-usage-logs",
+     *     path="/apikeys/api-usage-logs",
      *     tags={"API Usage Logs"},
      *     summary="Lister les journaux d'utilisation API",
      *     description="Retourne une liste paginée des logs API",
@@ -171,7 +171,7 @@ class ApiKeyUsageLogController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api-usage-logs",
+     *     path="/apikeys/api-usage-logs",
      *     tags={"API Usage Logs"},
      *     summary="Créer un journal d’utilisation d’API",
      *     description="Enregistre les détails d'une requête API pour analyse ou audit.",
@@ -239,7 +239,7 @@ class ApiKeyUsageLogController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api-usage-logs/{log}",
+     *     path="/apikeys/api-usage-logs/{log}",
      *     tags={"API Usage Logs"},
      *     summary="Afficher un journal d’usage",
      *     @OA\Parameter(
